--- a/index.html
+++ b/index.html
@@ -1,1 +1,61 @@
-Hello world
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> <!-- Add this line for Font Awesome -->
+    <link rel="stylesheet" href="styles/styles.css">
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="#">Home</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="#about">About Me</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#blog">Blog</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    
+    <div class="container d-flex justify-content-center align-items-center min-vh-100">
+        <div class="landing text-center p-5 shadow">
+            <h1>Welcome to My Portfolio</h1>
+            <p>This is where I showcase my work, thoughts, and experiences.</p>
+            <div class="social-buttons mt-4">
+                <a href="#" class="btn github"><i class="fab fa-github"></i></a>
+                <a href="#" class="btn linkedin"><i class="fab fa-linkedin"></i></a>
+                <a href="#" class="btn instagram"><i class="fab fa-instagram"></i></a>
+            </div>
+        </div>
+    </div>
+    
+    <section id="about" class="container py-5 shadow">
+        <h2>About Me</h2>
+        <p>Write a brief description about yourself here.</p>
+    </section>
+    <section id="blog" class="container py-5 shadow">
+        <h2>Blog</h2>
+        <p>Share your thoughts and experiences in your blog posts.</p>
+    </section>
+    <section id="projects" class="container py-5 shadow">
+        <h2>Projects</h2>
+        <p>Showcase your work and projects you've been involved in.</p>
+    </section>
+    <section id="contact" class="container py-5 shadow">
+        <h2>Contact</h2>
+        <p>Provide ways for visitors to get in touch with you.</p>
+    </section>
+    <footer class="bg-dark text-white text-center py-3">
+        <p>&copy; 2023 Your Name. All rights reserved.</p>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
