responsive design improved

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         
         <div class="container d-flex justify-content-center align-items-center min-vh-100 landing-container" style="background-image: url('https://i.ibb.co/RDGRzFG/landing-Back-G.png');"> 
             <!-- Add a class "landing-container" to target this specific container -->
-            <div class="landing text-center p-5 shadow">
-                <img src="https://i.ibb.co/HTsQs4h/Logo.png" alt="Logo" class="logo mb-3">
+            <div class="landing text-center p-3 p-md-5 shadow">
+                <img src="https://i.ibb.co/HTsQs4h/Logo.png" alt="Logo" class="logo mb-3 logo-small">
                 <p>This is where I showcase my work, thoughts, and experiences.</p>
-                <div class="social-buttons mt-4">
+                <div class="social-buttons mt-3 mt-md-4">
                     <a href="#" class="btn github"><i class="fab fa-github"></i></a>
                     <a href="#" class="btn linkedin"><i class="fab fa-linkedin"></i></a>
                     <a href="#" class="btn instagram"><i class="fab fa-instagram"></i></a>
@@ -39,19 +39,19 @@
             </div>
         </div>
         
-        <section id="about" class="container py-5 shadow">
+        <section id="about" class="container py-4 py-md-5 shadow">
             <h2>About Me</h2>
             <p>Write a brief description about yourself here.</p>
         </section>
-        <section id="blog" class="container py-5 shadow">
+        <section id="blog" class="container py-4 py-md-5 shadow">
             <h2>Blog</h2>
             <p>Share your thoughts and experiences in your blog posts.</p>
         </section>
-        <section id="projects" class="container py-5 shadow">
+        <section id="projects" class="container py-4 py-md-5 shadow">
             <h2>Projects</h2>
             <p>Showcase your work and projects you've been involved in.</p>
         </section>
-        <section id="contact" class="container py-5 shadow">
+        <section id="contact" class="container py-4 py-md-5 shadow">
             <h2>Contact</h2>
             <p>Provide ways for visitors to get in touch with you.</p>
         </section>
