skeleton ready at 60%

--- a/index.html
+++ b/index.html
@@ -56,7 +56,31 @@
 
     <section id="blog" class="container py-4 py-md-5 shadow bg-gray">
         <h2>Blog</h2>
-        <p>Share your thoughts and experiences in your blog posts.</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+        <div class="circle-container d-flex justify-content-around mt-5">
+            <div class="circle-item">
+                <img src="https://i.ibb.co/NnTtcf9/Blog1.png" alt="Image 1">
+            </div>
+            <div class="circle-item">
+                <img src="https://i.ibb.co/NnTtcf9/Blog1.png" alt="Image 2">
+            </div>
+            <div class="circle-item">
+                <img src="https://i.ibb.co/NnTtcf9/Blog1.png" alt="Image 3">
+            </div>
+            <div class="circle-item">
+                <img src="https://i.ibb.co/NnTtcf9/Blog1.png" alt="Image 4">
+            </div>
+            <div class="circle-item">
+                <img src="https://i.ibb.co/NnTtcf9/Blog1.pngg" alt="Image 5">
+            </div>
+        </div>
+        <div class="description-container d-flex justify-content-around mt-3">
+            <p>Brief description of Image 1.</p>
+            <p>Brief description of Image 2.</p>
+            <p>Brief description of Image 3.</p>
+            <p>Brief description of Image 4.</p>
+            <p>Brief description of Image 5.</p>
+        </div>
     </section>
 
 
