skeleton ready at 90%

--- a/index.html
+++ b/index.html
@@ -54,37 +54,38 @@
     </section>
 
 
-    <section id="blog" class="container py-4 py-md-5 shadow bg-gray">
+    <section id="blog" class="container py-4 py-md-5 shadow bg-gray text-center">
         <h2>Blog</h2>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
         <div class="circle-container d-flex justify-content-around mt-5">
-            <div class="circle-item">
+            <a href="https://link-to-article1" class="circle-item">
                 <img src="https://i.ibb.co/NnTtcf9/Blog1.png" alt="Image 1">
-            </div>
-            <div class="circle-item">
+                <p>RNN+CNN to forecast time series</p>
+            </a>
+            <a href="https://link-to-article2" class="circle-item">
                 <img src="https://i.ibb.co/NnTtcf9/Blog1.png" alt="Image 2">
-            </div>
-            <div class="circle-item">
+                <p>Cluster tool comparisons</p>
+            </a>
+            <a href="https://link-to-article3" class="circle-item">
                 <img src="https://i.ibb.co/NnTtcf9/Blog1.png" alt="Image 3">
-            </div>
-            <div class="circle-item">
+                <p>General guides to optimize a regression</p>
+            </a>
+            <a href="https://link-to-article4" class="circle-item">
                 <img src="https://i.ibb.co/NnTtcf9/Blog1.png" alt="Image 4">
-            </div>
-            <div class="circle-item">
-                <img src="https://i.ibb.co/NnTtcf9/Blog1.pngg" alt="Image 5">
-            </div>
+                <p>AGI to create images</p>
+            </a>
+            <a href="https://link-to-article5" class="circle-item">
+                <img src="https://i.ibb.co/NnTtcf9/Blog1.png" alt="Image 5">
+                <p>CNN to recognize patterns</p>
+            </a>
         </div>
-        <div class="description-container d-flex justify-content-around mt-3">
-            <p>Brief description of Image 1.</p>
-            <p>Brief description of Image 2.</p>
-            <p>Brief description of Image 3.</p>
-            <p>Brief description of Image 4.</p>
-            <p>Brief description of Image 5.</p>
+        <div class="read-more-button-container mt-4">
+            <a href="https://external-website-link" class="btn btn-link">Read More</a>
         </div>
     </section>
 
 
-    <section id="projects" class="container py-4 py-md-5 shadow bg-white">
+    <section id="projects" class="container py-4 py-md-5 shadow bg-white text-center">
         <h2>Projects</h2>
         <div class="row">
             <div class="col-md-4 project-item">
@@ -118,9 +119,17 @@
     </section>
 
 
-    <section id="contact" class="container py-4 py-md-5 shadow bg-gray">
+    <section id="contact" class="container py-4 py-md-5 shadow bg-gray text-center">
         <h2>Contact</h2>
-        <p>Provide ways for visitors to get in touch with you.</p>
+        <p>Got questions, ideas, or feedback? I'd love to hear from you! </p>
+        <p>If you're an open source enthusiast, feel free to engage with my projects by creating GitHub issues or pull requests.</p>
+        <p>For real-time updates, find me on Twitter, or drop me a line at Dannher97@hotmail.com.</p>
+        
+        <div class="contact-buttons d-flex justify-content-center">
+            <a href="mailto:Dannher97@hotmail.com" class="btn btn-primary mx-2">Send Email</a>
+            <a href="https://github.com/your-github-profile" class="btn btn-dark mx-2"><i class="fab fa-github"></i> GitHub</a>
+            <a href="https://www.linkedin.com/in/your-linkedin-profile" class="btn btn-primary mx-2"><i class="fab fa-linkedin"></i> LinkedIn</a>
+        </div>
     </section>
 
 
