skeleton ready at 99%

--- a/index.html
+++ b/index.html
@@ -60,23 +60,23 @@
         <div class="circle-container d-flex justify-content-around mt-5">
             <a href="https://link-to-article1" class="circle-item">
                 <img src="https://i.ibb.co/NnTtcf9/Blog1.png" alt="Image 1">
-                <p>RNN+CNN to forecast time series</p>
+                <p>RNN+CNN in forecasting</p>
             </a>
             <a href="https://link-to-article2" class="circle-item">
                 <img src="https://i.ibb.co/NnTtcf9/Blog1.png" alt="Image 2">
-                <p>Cluster tool comparisons</p>
+                <p>Clusters performance</p>
             </a>
             <a href="https://link-to-article3" class="circle-item">
                 <img src="https://i.ibb.co/NnTtcf9/Blog1.png" alt="Image 3">
-                <p>General guides to optimize a regression</p>
+                <p>Optimized models</p>
             </a>
             <a href="https://link-to-article4" class="circle-item">
                 <img src="https://i.ibb.co/NnTtcf9/Blog1.png" alt="Image 4">
-                <p>AGI to create images</p>
+                <p>AGIs for images</p>
             </a>
             <a href="https://link-to-article5" class="circle-item">
                 <img src="https://i.ibb.co/NnTtcf9/Blog1.png" alt="Image 5">
-                <p>CNN to recognize patterns</p>
+                <p>ML in diabetes</p>
             </a>
         </div>
         <div class="read-more-button-container mt-4">
