--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="#">Home</a>
+        <a class="navbar-brand" href="#"><div class="home-icon"></div> <span class="home-text">Home</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -121,9 +120,9 @@
 
     <section id="contact" class="container py-4 py-md-5 shadow bg-gray text-center">
         <h2>Contact</h2>
-        <p>Got questions, ideas, or feedback? I'd love to hear from you! </p>
+        <p>Got questions, ideas, or feedback? I'd love to hear from you! &#128522;</p>
         <p>If you're an open source enthusiast, feel free to engage with my projects by creating GitHub issues or pull requests.</p>
-        <p>For real-time updates, find me on Twitter, or drop me a line at Dannher97@hotmail.com.</p>
+        <p>For real-time updates, find me on GitHub, or drop me a line at Dannher97@hotmail.com.</p>
         
         <div class="contact-buttons d-flex justify-content-center">
             <a href="mailto:Dannher97@hotmail.com" class="btn btn-primary mx-2">Send Email</a>
