including intro and landing updates

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <!-- Add a class "landing-container" to target this specific container -->
         <div class="landing text-center p-3 p-md-5 shadow">
             <img src="https://i.ibb.co/HTsQs4h/Logo.png" alt="Logo" class="logo mb-3 logo-small">
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+            <p>Passionate about tech, NLP, computer vision, and generative AI. An enthusiastic in robotics and integrated systems to transform process, lives and communities</p>
             <div class="social-buttons mt-3 mt-md-4">
                 <a href="#" class="btn github"><i class="fab fa-github"></i></a>
                 <a href="#" class="btn linkedin"><i class="fab fa-linkedin"></i></a>
@@ -42,11 +42,14 @@
     <section id="about" class="container py-4 py-md-5 shadow bg-white">
         <div class="row align-items-center">
             <div class="col-md-6">
-                <img src="https://i.natgeofe.com/k/ad9b542e-c4a0-4d0b-9147-da17121b4c98/MOmeow1_4x3.png" alt="About Me Image" class="about-image">
+                <img src="https://previews.dropbox.com/p/thumb/ACG0YOrlj2C1urkRAmN9VDOsIlQbaKC-_adM5j8itPGXwFxWnNeLB3QY-i-X8hKsuj5XdPE7nZmNSZEZcKA3KxmLfNfqfQHA_DiGiYlWG7jgT_g2ozQAZ-g63LZOnMhxpwpMAU69mxnUEX1sODE6V3NYgV0xoQl2DMDUgyrSx2SSO-psFl4eA3NF3F46U_Tr-renB8rCgwyFL-jPA3-3ulsGX7oWVlWkpC_4OH37zbxDPGHXRAtPM3v7XzudWX_u4vP2Trmle_edH2lSPOA2X68IP8yltrYq66V_FyPT_5FvLa4O5J0t_bPIGyKcEiQGkdTOhxzJlQuV8HaQ6a7fguVy/p.png" alt="About Me Image" class="about-image" style="height: fit-content;">
             </div>
             <div class="col-md-6">
                 <h2>About Me</h2>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                <p>I am Daniel, an industrial engineer and economist with a master's in artificial intelligence. I am passionate about connecting people and communities with technological state-of-the-art tools that enhance their quality of life and simplify tasks. Throughout my career, I have gained experience in the public and private sectors, including finances, policies, e-commerce, and market research. That experience enhanced my analytical skills and allowed me to explore various methods to interpret data patterns. My expertise extends to cutting-edge areas such as natural language processing, computer vision, and machine learning, where I have consistently delivered top-notch results. </p>
+
+                <p>Some of my projects include detecting readmission diabetes patients, a sign language recognition system, and an automated cluster tool.</p>
+
             </div>
 
         </div>
