including image fixed

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section id="about" class="container py-4 py-md-5 shadow bg-white">
         <div class="row align-items-center">
             <div class="col-md-6">
-                <img src="https://previews.dropbox.com/p/thumb/ACG0YOrlj2C1urkRAmN9VDOsIlQbaKC-_adM5j8itPGXwFxWnNeLB3QY-i-X8hKsuj5XdPE7nZmNSZEZcKA3KxmLfNfqfQHA_DiGiYlWG7jgT_g2ozQAZ-g63LZOnMhxpwpMAU69mxnUEX1sODE6V3NYgV0xoQl2DMDUgyrSx2SSO-psFl4eA3NF3F46U_Tr-renB8rCgwyFL-jPA3-3ulsGX7oWVlWkpC_4OH37zbxDPGHXRAtPM3v7XzudWX_u4vP2Trmle_edH2lSPOA2X68IP8yltrYq66V_FyPT_5FvLa4O5J0t_bPIGyKcEiQGkdTOhxzJlQuV8HaQ6a7fguVy/p.png" alt="About Me Image" class="about-image" style="height: fit-content;">
+                <img src="https://i.ibb.co/sqJQG8B/Main.png" alt="About Me Image" class="about-image" style="height: fit-content;">
             </div>
             <div class="col-md-6">
                 <h2>About Me</h2>
