--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             <div class="col-md-6">
                 <h2>About Me</h2>
-                <p>I am Daniel, an industrial engineer and economist with a master's in artificial intelligence. I am passionate about connecting people and communities with technological state-of-the-art tools that enhance their quality of life and simplify tasks. Throughout my career, I have gained experience in the public and private sectors, including finances, policies, e-commerce, and market research. That experience enhanced my analytical skills and allowed me to explore various methods to interpret data patterns. My expertise extends to cutting-edge areas such as natural language processing, computer vision, and machine learning, where I have consistently delivered top-notch results. </p>
+                <p>I am Daniel, an industrial engineer and economist with a master's in artificial intelligence. I am passionate about connecting people and communities with technological state-of-the-art tools that enhance their quality of life and simplify tasks. Throughout my career, I have gained experience in the public and private sectors, including finances, policies, e-commerce, and market research. My expertise extends to cutting-edge areas such as natural language processing, computer vision, and machine learning, where I have consistently delivered top-notch results. </p>
 
                 <p>Some of my projects include detecting readmission diabetes patients, a sign language recognition system, and an automated cluster tool.</p>
 
