--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
 
     <section id="blog" class="container py-4 py-md-5 shadow bg-gray text-center">
         <h2>Blog</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+
+        <p> Below are some examples of my recent projects, advanced deep learning methodologies for precise forecasting and detection. Those projects collectively aim to push the boundaries of AI innovation and solve complex challenges through technology.</p>
         <div class="circle-container d-flex justify-content-around mt-5">
             <a href="https://link-to-article1" class="circle-item">
                 <img src="https://i.ibb.co/NnTtcf9/Blog1.png" alt="Image 1">
@@ -123,8 +124,8 @@
 
     <section id="contact" class="container py-4 py-md-5 shadow bg-gray text-center">
         <h2>Contact</h2>
-        <p>Got questions, ideas, or feedback? I'd love to hear from you! &#128522;</p>
-        <p>If you're an open source enthusiast, feel free to engage with my projects by creating GitHub issues or pull requests.</p>
+        <p>Have questions, ideas, or feedback? I'm eager to connect!  &#128522;</p>
+        <p>Please feel free to engage with my projects by creating GitHub issues or pull requests.</p>
         <p>For real-time updates, find me on GitHub, or drop me a line at Dannher97@hotmail.com.</p>
         
         <div class="contact-buttons d-flex justify-content-center">
@@ -136,7 +137,7 @@
 
 
     <footer class="bg-dark text-white text-center py-3">
-        <p>&copy; 2023 Your Name. All rights reserved.</p>
+        <p>&copy; Daniel Hernandez. - AI engineer - All rights reserved.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
