--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             <img src="https://i.ibb.co/HTsQs4h/Logo.png" alt="Logo" class="logo mb-3 logo-small">
             <p>Passionate about tech, NLP, computer vision, and generative AI. An enthusiastic in robotics and integrated systems to transform process, lives and communities</p>
             <div class="social-buttons mt-3 mt-md-4">
-                <a href="#" class="btn github"><i class="fab fa-github"></i></a>
-                <a href="#" class="btn linkedin"><i class="fab fa-linkedin"></i></a>
-                <a href="#" class="btn instagram"><i class="fab fa-instagram"></i></a>
+                <a href="https://github.com/Dannher97" class="btn github"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/daniel-felipe-hernandez-avila-4742571ab/" class="btn linkedin"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.instagram.com/randomuser4777/?igsh=ZnRta3g0azcxeWF4" class="btn instagram"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
     </div>
@@ -46,9 +46,9 @@
             </div>
             <div class="col-md-6">
                 <h2>About Me</h2>
-                <p>I am Daniel, an industrial engineer and economist with a master's in artificial intelligence. I am passionate about connecting people and communities with technological state-of-the-art tools that enhance their quality of life and simplify tasks. Throughout my career, I have gained experience in the public and private sectors, including finances, policies, e-commerce, and market research. My expertise extends to cutting-edge areas such as natural language processing, computer vision, and machine learning, where I have consistently delivered top-notch results. </p>
+                <p>I am Daniel, an economist and industrial engineer with a master's in artificial intelligence. I am passionate about connecting people and communities with technological state-of-the-art tools that enhance their quality of life and simplify tasks. Throughout my career, I have gained experience in the public and private sectors, including finances, policies, e-commerce, and market research. My expertise extends to cutting-edge areas such as natural language processing, computer vision, and machine learning, where I have consistently delivered top-notch results. </p>
 
-                <p>Some of my projects include detecting readmission diabetes patients, a sign language recognition system, and an automated cluster tool.</p>
+                <p>Some of my projects include detecting readmission diabetes patients, a sign language recognition system, an automated cluster tool and a high-end system for landmining detection using GRPs, drones and autoencoders.</p>
 
             </div>
 
@@ -59,13 +59,13 @@
     <section id="blog" class="container py-4 py-md-5 shadow bg-gray text-center">
         <h2>Blog</h2>
 
-        <p> Below are some examples of my recent projects, advanced deep learning methodologies for precise forecasting and detection. Those projects collectively aim to push the boundaries of AI innovation and solve complex challenges through technology.</p>
+        <p> Please feel free to dive through some examples of my recent projects, most includes advanced machine learning methodologies for forecasting, classification and detection.</p>
         <div class="circle-container d-flex justify-content-around mt-5">
             <a href="https://link-to-article1" class="circle-item">
                 <img src="https://i.ibb.co/NnTtcf9/Blog1.png" alt="Image 1">
                 <p>RNN+CNN in forecasting</p>
             </a>
-            <a href="https://link-to-article2" class="circle-item">
+            <a href="https://medium.com/@dannfe97/implementing-kmeans-in-a-diverse-dataset-about-credit-cards-636363f9508b" class="circle-item">
                 <img src="https://i.ibb.co/NnTtcf9/Blog1.png" alt="Image 2">
                 <p>Clusters performance</p>
             </a>
@@ -92,17 +92,17 @@
         <h2>Projects</h2>
         <div class="row">
             <div class="col-md-4 project-item">
-                <a href="project1-link">
-                    <img src="https://i.natgeofe.com/k/ad9b542e-c4a0-4d0b-9147-da17121b4c98/MOmeow1_4x3.png" alt="Project 1">
+                <a href="https://danielhernandez.shinyapps.io/ClusterV9/">
+                    <img src="https://i.ibb.co/cCF0pbp/Back-Project.jpg" alt="Automated Cluster Tool">
                     <div class="project-info">
-                        <h3>Project 1</h3>
-                        <p>Brief description of Project 1.</p>
+                        <h3>Automated Cluster Tool</h3>
+                        <p>Automated tool to create clusters and provide insights based on up to 3 methodologies (GMM, Kmenas, and Hierarchical).</p>
                     </div>
                 </a>
             </div>
             <div class="col-md-4 project-item">
                 <a href="project2-link">
-                    <img src="https://i.natgeofe.com/k/ad9b542e-c4a0-4d0b-9147-da17121b4c98/MOmeow1_4x3.png" alt="Project 2">
+                    <img src="https://i.ibb.co/cCF0pbp/Back-Project.jpg" alt="Project 2">
                     <div class="project-info">
                         <h3>Project 2</h3>
                         <p>Brief description of Project 2.</p>
@@ -111,7 +111,7 @@
             </div>
             <div class="col-md-4 project-item">
                 <a href="project3-link">
-                    <img src="https://i.natgeofe.com/k/ad9b542e-c4a0-4d0b-9147-da17121b4c98/MOmeow1_4x3.png" alt="Project 3">
+                    <img src="https://i.ibb.co/cCF0pbp/Back-Project.jpg" alt="Project 3">
                     <div class="project-info">
                         <h3>Project 3</h3>
                         <p>Brief description of Project 3.</p>
@@ -130,8 +130,8 @@
         
         <div class="contact-buttons d-flex justify-content-center">
             <a href="mailto:Dannher97@hotmail.com" class="btn btn-primary mx-2">Send Email</a>
-            <a href="https://github.com/your-github-profile" class="btn btn-dark mx-2"><i class="fab fa-github"></i> GitHub</a>
-            <a href="https://www.linkedin.com/in/your-linkedin-profile" class="btn btn-primary mx-2"><i class="fab fa-linkedin"></i> LinkedIn</a>
+            <a href="https://github.com/Dannher97" class="btn btn-dark mx-2"><i class="fab fa-github"></i> GitHub</a>
+            <a href="https://www.linkedin.com/in/daniel-felipe-hernandez-avila-4742571ab/" class="btn btn-primary mx-2"><i class="fab fa-linkedin"></i> LinkedIn</a>
         </div>
     </section>
 
