--- a/index.html
+++ b/index.html
@@ -66,24 +66,24 @@
                 <p>RNN+CNN in forecasting</p>
             </a>
             <a href="https://medium.com/@dannfe97/implementing-kmeans-in-a-diverse-dataset-about-credit-cards-636363f9508b" class="circle-item">
-                <img src="https://i.ibb.co/NnTtcf9/Blog1.png" alt="Image 2">
+                <img src="https://i.ibb.co/NnTtcf9/Blog1.png" alt="Clustering">
                 <p>Clusters performance</p>
             </a>
-            <a href="https://link-to-article3" class="circle-item">
-                <img src="https://i.ibb.co/NnTtcf9/Blog1.png" alt="Image 3">
+            <a href="https://colab.research.google.com/drive/1VwFpP6B1PgvABj9ZIslvRL7BFLI0Ijw8#scrollTo=9njuGAAM4Cvt" class="circle-item">
+                <img src="https://i.ibb.co/NnTtcf9/Blog1.png" alt="Optimization">
                 <p>Optimized models</p>
             </a>
             <a href="https://link-to-article4" class="circle-item">
                 <img src="https://i.ibb.co/NnTtcf9/Blog1.png" alt="Image 4">
                 <p>AGIs for images</p>
             </a>
-            <a href="https://link-to-article5" class="circle-item">
-                <img src="https://i.ibb.co/NnTtcf9/Blog1.png" alt="Image 5">
+            <a href="https://drive.google.com/file/d/1PigZ4xA0Jdv6iWUZWtJbE2VRZJLmT8Cl/view" class="circle-item">
+                <img src="https://i.ibb.co/NnTtcf9/Blog1.png" alt="Diabetes readmission">
                 <p>ML in diabetes</p>
             </a>
         </div>
         <div class="read-more-button-container mt-4">
-            <a href="https://external-website-link" class="btn btn-link">Read More</a>
+            <a href="https://medium.com/@dannfe97" class="btn btn-link">Read More</a>
         </div>
     </section>
 
