--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 
         <p> Please feel free to dive through some examples of my recent projects, most includes advanced machine learning methodologies for forecasting, classification and detection.</p>
         <div class="circle-container d-flex justify-content-around mt-5">
-            <a href="https://link-to-article1" class="circle-item">
-                <img src="https://i.ibb.co/NnTtcf9/Blog1.png" alt="Image 1">
+            <a href="https://colab.research.google.com/drive/1All9en_RZlXnivZ24M6oADdWqql-gpFy#scrollTo=w61i0Q4AUfKC" class="circle-item">
+                <img src="https://i.ibb.co/NnTtcf9/Blog1.png" alt="Time series forecasting">
                 <p>RNN+CNN in forecasting</p>
             </a>
             <a href="https://medium.com/@dannfe97/implementing-kmeans-in-a-diverse-dataset-about-credit-cards-636363f9508b" class="circle-item">
@@ -89,11 +89,11 @@
 
 
     <section id="projects" class="container py-4 py-md-5 shadow bg-white text-center">
-        <h2>Projects</h2>
+        <h2>Relevant projects</h2>
         <div class="row">
             <div class="col-md-4 project-item">
                 <a href="https://danielhernandez.shinyapps.io/ClusterV9/">
-                    <img src="https://i.ibb.co/cCF0pbp/Back-Project.jpg" alt="Automated Cluster Tool">
+                    <img src="https://i.ibb.co/RY2b8tS/p1.png" alt="Automated Cluster Tool">
                     <div class="project-info">
                         <h3>Automated Cluster Tool</h3>
                         <p>Automated tool to create clusters and provide insights based on up to 3 methodologies (GMM, Kmenas, and Hierarchical).</p>
@@ -101,20 +101,21 @@
                 </a>
             </div>
             <div class="col-md-4 project-item">
-                <a href="project2-link">
-                    <img src="https://i.ibb.co/cCF0pbp/Back-Project.jpg" alt="Project 2">
+                <a href="https://danielhernandezshiny2.shinyapps.io/DeliveryAPP_case_study/">
+                    <img src="https://i.ibb.co/hCBZzVN/p2.png" alt="Sales and Op Dashboard">
                     <div class="project-info">
-                        <h3>Project 2</h3>
-                        <p>Brief description of Project 2.</p>
+                        <h3>Sales and Operation Dashboard</h3>
+                        <p>Dashboard with key metrics and performance indicators related to both sales and operational processes for an hypothetical delivery app.
+                        </p>
                     </div>
                 </a>
             </div>
             <div class="col-md-4 project-item">
-                <a href="project3-link">
-                    <img src="https://i.ibb.co/cCF0pbp/Back-Project.jpg" alt="Project 3">
+                <a href="INPROGRESS">
+                    <img src="https://i.ibb.co/hCcxqyX/p3.png" alt="Landmine detection">
                     <div class="project-info">
-                        <h3>Project 3</h3>
-                        <p>Brief description of Project 3.</p>
+                        <h3>Landmine detection</h3>
+                        <p>Integrated system for landmine detection - WIP, sorry it's under maintainance :) </p>
                     </div>
                 </a>
             </div>
