Revision with Landmine APP in maintenance

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
                 <img src="https://i.ibb.co/NnTtcf9/Blog1.png" alt="Optimization">
                 <p>Optimized models</p>
             </a>
-            <a href="https://link-to-article4" class="circle-item">
-                <img src="https://i.ibb.co/NnTtcf9/Blog1.png" alt="Image 4">
-                <p>AGIs for images</p>
+            <a href="https://colab.research.google.com/drive/1DTYPORUlXMyMNgdjxZu_1pZCf7X0jccu?usp=sharing" class="circle-item">
+                <img src="https://i.ibb.co/NnTtcf9/Blog1.png" alt="HPC with SPARK">
+                <p>HPC with SPARK</p>
             </a>
             <a href="https://drive.google.com/file/d/1PigZ4xA0Jdv6iWUZWtJbE2VRZJLmT8Cl/view" class="circle-item">
                 <img src="https://i.ibb.co/NnTtcf9/Blog1.png" alt="Diabetes readmission">
